# my-parser-combinators

./: README.md  my-parser-combinators.cabal
src/Main/Parsing/: Combinators.hs  Parser.hs
test/Main/Parsing/: CombinatorsTest.hs
