name:                my-parser-combinators
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mchernyavsky/my-parser-combinators#readme
license:             MIT
license-file:        LICENSE
author:              Mikhail Chernyavsky
maintainer:          chemike47@gmail.com
copyright:           2018 Mikhail Chernyavsky
category:            Parsing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Main.Parsing.Combinators
                     , Main.Parsing.Parser
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

test-suite my-parser-combinators-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main/Parsing/CombinatorsTest.hs
  build-depends:       base
                     , my-parser-combinators
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Main.Parsing.CombinatorsTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mchernyavsky/my-parser-combinators
